--- a/views/navigation/about.pug
+++ b/views/navigation/about.pug
@@ -11,9 +11,9 @@ block main
             img(src="/public/imgs/about/img1.jpg")
     div(id="modal1" class="modal modal-fixed-footer")
         div(class="modal-content row")
-            div(class="col s6")
+            div(class="col s12 m12 l6")
                 img(src="/public/imgs/about/img1.jpg" class="modal-image")
-            div(class="col s6")
+            div(class="col s12 m12 l6")
                 h4(class="col s12")
                     |Vlado Vlaev
                 p
