--- a/views/events/event-view.pug
+++ b/views/events/event-view.pug
@@ -4,7 +4,7 @@ block main
         link(rel='stylesheet', href='../../public/css/ranking.css', type='text/css' )
         script(src="../../public/js/event.view.ajax.js")
         div(class="container-fluid row")
-                div(class="col-md-4")
+                div(class="col s12 m6 l6")
                     div(class="card event-card")
                         //- img(class="card-img-top" src="..." alt="Image")
                         div(class="card-block")
