--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -17,10 +17,12 @@ block main
         a(class="carousel-item" href="#five!")
             img(src="https://lorempixel.com/250/250/nature/5")   
     div(class="row center-align" id="home-buttons") 
-        a(class="btn deep-orange col s5 m4 l2" href="/browse-events" id="browse-events-btn")
+        a(class="btn deep-orange col s12 m4 l2" href="/browse-events" id="browse-events-btn")
             |Browse More
-        unless user      
-            a(class="btn deep-orange col s4 m4 l2" href="/login" id="sign-in-btn")
+        if user
+                a(href='/chat' class="s12 m4 l4 hide-on-med-and-up btn deep-orange")
+                    |Join chat
+        unless user   
+            a(class="btn deep-orange col s12 m4 l2" href="/login" id="sign-in-btn")
                 |Sign In
     script(src="../../public/js/carousel.js")
-    
