Login, logout notifications added, chat improved.

--- a/views/common/_master.pug
+++ b/views/common/_master.pug
@@ -25,7 +25,8 @@ header
     block header
     +header()
 main
-    block main    
+    block main
+    script(src="/public/js/notifications/logout.notification.js")    
 footer
     block header
     +footer()
