--- a/views/common/_nav.pug
+++ b/views/common/_nav.pug
@@ -24,3 +24,4 @@ mixin nav()
             li(class="" id="navbar-chat")
                 a(href='/chat')
                    | Join chat
+script(src="/public/js/notifications/logout.notification.js")
