--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -31,3 +31,4 @@ block main
             form(action="/user/browse-events")
                 button(class="btn deep-orange")
                     |Browse all
+    script(src="/public/js/notifications/profile.notification.js")
