--- a/views/users/profile-edit.pug
+++ b/views/users/profile-edit.pug
@@ -10,17 +10,14 @@ block main
                         div(class="col s4 file-field input-field")
                             div(class="btn deep-orange")
                                 span
-                                    |Image
+                                    |Change Image
                                 input(type="file" name="profile" accept="application/x-zip-compressed,image/*")                 
                             div(class="file-path-wrapper")
                             input(class="file-path validate" type="text")
                     .col-sm-6.col-md-8.text-center
-                        input(type="text" name="firstName" value=user.firstName placeholder="First Name")
-                        input(type="text" name="lastName" value=user.lastName placeholder="Last Name")                                                
                         h4#username
                             = user.username
                         i.glyphicon.glyphicon-map-marker
-                        input(type="text" name="city" value=user.city placeholder="City")                                                
                         br
                         i.glyphicon.glyphicon-envelope
                             = user.email
