--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -17,7 +17,7 @@ block main
             p(class="flow-text")
                     |City: #{user.city}
             p(class="flow-text")
-                    |Lastname: #{user.email}
+                    |Email: #{user.email}
         div(class="col s12 m5 l3" id="profile-buttons")
             form(action="/user/profile/edit")
                 button(class="btn deep-orange")
