--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -6,6 +6,7 @@ block main
     script(src="public/js/events/view.event.js")
     script(src="public/js/events/join.event.js")
     script(src="public/js/events/leave.event.js")
+    script(src="public/js/notifications/notification.helper.js")
     form(id='browse-events-form' class="col s6" action='/browse-events' method='POST')
         div(class="row")
             div(class="col s12 m3 l3")
