--- a/views/users/profile-edit.pug
+++ b/views/users/profile-edit.pug
@@ -1,30 +1,30 @@
 extend ../common/_master
 
 block main
-    link(rel='stylesheet', href='../../public/css/users/profile.css', type='text/css' )
+    link(rel='stylesheet', href='../../public/css/users/profile-edit.css', type='text/css' )
     script(src="../../public/js/users/edit.profile.helper.js")
     div(class="row")
         form(action="/user/profile/edit" method="POST" enctype="multipart/form-data")
-            .col-sm-6.col-md-8
-                h4#username
-                    |#{user.username}
-
-            div(class="col s4 file-field input-field")
+            h4
+                |#{user.username}
+            div(class="row col s12 m6 l6 file-field input-field")
                 div(class="btn deep-orange")
                     span
                         |Change Image
                     input(type="file" name="profile" accept="application/x-zip-compressed,image/*")                 
                 div(class="file-path-wrapper")
                 input(class="file-path validate" type="text")
-            div(class="input-field col s6")
+            div(class="input-field col s11 m6 l5")
                 input(disabled value="" name="password" id="password" type="password" class="validate")
                 label(for="password")
                     |Change Password    
-                button.material-icons.prefix mode_edit
-            div(class="input-field col s6")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+            div(class="input-field col s11 m6 l5")
                 input(disabled value=user.email name="email" id="email" type="email" class="validate")
                 label(for="email")
                     |Change Email
-                button.material-icons.prefix mode_edit
-            button(type='submit' class='btn deep-orange')
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+            button(type='submit' class='btn deep-orange' id="submit-button")
                 | Submit
