--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -3,6 +3,21 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/users/my-events.css', type='text/css' )
-    div(class="row")
-        h1
-            |Hi
+    div(class="card horizontal row")
+        div(class="card-image col s12 m3 l3")
+            img(class="col s12" src="http://sunrisebangalore.com/gallery-pic/1f154-45749128-50609527event1.jpg")
+        div(class="card-stacked col s12 m9 l6")
+            h5(class="header")
+                |Event name
+            div(class="card-content")
+                p
+                    |Event description da kajem.         
+            div(class="card-action")
+                a(href="#")
+                    |View more
+                a(href="#")
+                    |Manage
+                a(href="#")
+                    |Leave
+                a(href="#")
+                    |Disband   
