--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -25,7 +25,7 @@ block main
             form(action="/user/create-event")
                 button(class="btn deep-orange")
                     |Create event
-            form(action="/user/my-events")
+            form(action="/user/profile/my-events")
                 button(class="btn deep-orange")
                     |My events
             form(action="/user/browse-events")
