--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -12,10 +12,8 @@ block main
                     |#{event.eventName}
                 div(class="card-content")
                     p
-                        |Event description da kajem.         
+                        |joined.         
                 div(class="card-action")
-                    a(href="#")
-                        |View more
                     a(href="#")
                         |Leave
     div(class="card horizontal row")
@@ -28,10 +26,8 @@ block main
                     |#{event.eventName}
                 div(class="card-content")
                     p
-                        |Event description da kajem.         
+                        |created.         
                 div(class="card-action")
-                    a(href="#")
-                        |View more
                     a(href="#")
                         |Manage
                     a(href="#")
