--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -28,7 +28,7 @@ block main
                     p
                         |created.         
                 div(class="card-action")
-                    a(href="#")
+                    a(href="/event/manage-event/" + event._id)
                         |Manage
                     a(href="#")
                         |Disband
