--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -31,7 +31,7 @@ block main
                     p
                         |created.         
                 div(class="card-action")
-                    a(href="/event/manage-event/" + event._id)
+                    a(href=`/events/manage/${event._id}`)
                         |Manage
                     a(href="#")
                         |Disband
