--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -2,7 +2,7 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
-    form(id='browse-events-form' class="col s6" action='/browse-events' method='POST')
+    form(id='browse-events-form' class="col s6" action='/events/browse' method='PUT')
         div(class="row")
             div(class="col s12 m3 l3")
                 div(class="row")
@@ -51,11 +51,13 @@ block main
                                     |#{event.eventName}
                             div(class="card-content")
                                 p
+                                    |Author: #{event.author}
+                                p
                                     |#{event.eventDescription}
                             div(class="card-action")
-                                a(href="#modal" + event._id data-target="modal" + event._id class="modal-trigger")
+                                a(href=event._id data-target=event._id class="modal-trigger")
                                     |View more
-                    div(id="modal" + event._id class="modal modal-fixed-footer")
+                    div(id=event._id class="modal modal-fixed-footer")
                         div(class="modal-content row")
                             div(class="col s6")
                             if event.eventImage.encoded
@@ -65,6 +67,8 @@ block main
                             div(class="col s6")
                                 h4(class="col s12")
                                     |#{event.eventName}
+                                p
+                                    |Author: #{event.author}
                                 p
                                     |#{event.eventDescription}
                         div(class="modal-footer")
@@ -76,7 +80,7 @@ block main
                                         |Participate
                                     button(id="leave-btn" class="modal-action modal-close waves-effect waves-green btn-flat leave-btn hidden")
                                         |Leave
-                                    a(href="/event/manage-event/" + event._id id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat manage-btn hidden")
+                                    a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat manage-btn hidden")
                                         |Manage 
                                     a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
                                         |Bring me back
@@ -84,7 +88,7 @@ block main
                                 div(class="btn-container hidden")
                                     button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
                                         |Participate
-                                    a(href="/event/manage-event/" + event._id id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat")
+                                    a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat")
                                         |Manage 
                                     a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
                                         |Bring me back    
