--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -22,13 +22,13 @@ block main
             form(action="/user/profile/edit")
                 button(class="btn deep-orange")
                     |Edit profile
-            form(action="/user/create-event")
+            form(action="/events/create")
                 button(class="btn deep-orange")
                     |Create event
             form(action="/user/profile/my-events")
                 button(class="btn deep-orange")
                     |My events
-            form(action="/user/browse-events")
+            form(action="/events/browse")
                 button(class="btn deep-orange")
                     |Browse all
     script(src="/public/js/notifications/profile.notification.js")
