Fixed events info in browse events and my events, fixed edit event, register notifications

--- a/public/css/users/register.css
+++ b/public/css/users/register.css
@@ -1,10 +1,13 @@
- #register-form {
-     margin-top: 5%;
-     margin-left: 35%;
- }
+#register-form {
+    margin-top: 5%;
+    margin-left: 35%;
+}
 
-  
+#register-btn {
+    margin-left: 28%;
+}
 
- #register-btn{
-     margin-left: 28%;
+#messages-box {
+     width: 20%;
+     margin-left: 38%;
  }
