--- a/views/events/manage-event.pug
+++ b/views/events/manage-event.pug
@@ -1,48 +1,46 @@
 extend ../common/_master
 
 block main
-    link(rel='stylesheet', href='../../public/css/users/manage-event.css', type='text/css' )
+    link(rel='stylesheet', href='../../public/css/users/manage-event.css', type='text/css')
     script(src="../../public/js/users/edit.profile.helper.js")
-    form(action=`/events/manage/${event._id}` method='POST' enctype="multipart/form-data")            
-        div(class="input-field col s11 m6 l5")
-            input(disabled name="eventName" value=event.eventName id="eventName" type="text" class="validate")
-            label(for="eventName")
-                |Event name: 
-            button(class="deep-orange material-icons prefix") 
-                |mode_edit
-        div(class="input-field col s11 m6 l5")
-            input(disabled name="eventLocation" value=event.eventLocation id="eventLocation" type="text" class="validate")
-            label(for="eventLocation")
-                |Event location:
-            button(class="deep-orange material-icons prefix") 
-                |mode_edit
-        div(class="input-field col s11 m6 l5")
-            input(disabled name="eventType" value=event.eventType id="eventType" type="text" class="validate")
-            label(for="eventType")
-                |Event type:
-            button(class="deep-orange material-icons prefix") 
-                |mode_edit
-        div(class="input-field col s11 m6 l5")
-            input(disabled name="eventDescription" value=event.eventDescription id="eventDescription" type="text" class="validate")
-            label(for="eventDescription")
-                |Event description:
-            button(class="deep-orange material-icons prefix") 
-                |mode_edit
+    form(action=`/events/manage/${event._id}` method='POST' enctype="multipart/form-data")    
+        div(class="row")     
+            div(class="input-field col s12 m5 l3")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+                input(disabled name="eventName" value=event.eventName id="eventName" type="text" class="validate")
+                label(for="eventName")
+                    |Event name: 
+            div(class="input-field col s12 m5 l3")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+                input(disabled name="eventLocation" value=event.eventLocation id="eventLocation" type="text" class="validate")
+                label(for="eventLocation")
+                    |Event location:
         div(class="row")
-            div(class="col s6")
-                div(class="row")
-                    div(class="input-field col s6")
-                        i(class="material-icons prefix")|date_range                                                        
-                        input(disabled name="eventDate" type="date" id="datepicker" class="datepicker")
-                        label(for="datepicker")
-                            |Pick date:
-            div(class="col s6")
-                div(class="row")
-                    div(class="input-field col s6")
-                        i(class="material-icons prefix")|access_time                                              
-                        input(disabled name="eventTime" type="date" id="eventTime" class="timepicker")
-                        label(for="eventTime")
-                            |Pick hours:
+            div(class="input-field col s12 m5 l3")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+                input(disabled name="eventType" value=event.eventType id="eventType" type="text" class="validate")
+                label(for="eventType")
+                    |Event type:
+            div(class="input-field col s12 m5 l3")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+                input(disabled name="eventDescription" value=event.eventDescription id="eventDescription" type="text" class="validate")
+                label(for="eventDescription")
+                    |Event description:
+        div(class="row")
+            div(class="input-field col s12 m5 l3")
+                button(class="deep-orange material-icons prefix") 
+                    |mode_edit
+                input(disabled name="eventDate" type="date" id="datepicker" class="datepicker")
+                i(class="material-icons prefix")|date_range                
+            div(class="input-field col s12 m5 l3" id="hours-picker-form")
+                button(class="deep-orange material-icons prefix") 
+                   |mode_edit                      
+                input(disabled name="eventTime" type="date" id="eventTime" class="timepicker")
+                i(class="material-icons prefix")|access_time
         div(class="row")            
             div(class="col s4 file-field input-field")
                 div(class="btn deep-orange")
@@ -51,9 +49,9 @@ block main
                     input(type="file" name="eventImage" accept="application/x-zip-compressed,image/*")
                 div(class="file-path-wrapper")
                 input(class="file-path validate" type="text")
-            button(type='submit' class='btn deep-orange' id='manage-event-btn')
+            button(type='submit' class='btn deep-orange' id='manage-event-save-btn')
                     |Save
-            button(class='btn deep-orange' id='manage-event-btn')
+            button(class='btn deep-orange' id='manage-event-discard-btn')
                     |Discard changes
         script(src="../../public/js/events/datepicker.js")
         script(src="../../public/js/events/timepicker.js")
