--- a/views/users/my-events.pug
+++ b/views/users/my-events.pug
@@ -14,31 +14,41 @@ block main
                             if event.eventImage.encoded
                                 img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
                             else
-                                img(src="data:image/png;base64," + event.eventImage.default)
+                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
                                 span(class="card-title")
                                     |#{event.eventName}
                             div(class="card-content")
                                 p
                                     |Author: #{event.author}
                                 p
-                                    |#{event.eventDescription}
+                                    |Date: #{event.eventDate}
+                                p
+                                    |Description: #{event.eventDescription}
                             div(class="card-action")
                                 a(href=event._id data-target=event._id class="modal-trigger")
                                     |View more
                     div(id=event._id class="modal modal-fixed-footer")
                         div(class="modal-content row")
-                            div(class="col s6")
+                            div(class="col s12")
                             if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded)
+                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
                             else
-                                img(src="data:image/png;base64," + event.eventImage.default)
+                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
                             div(class="col s6")
                                 h4(class="col s12")
                                     |#{event.eventName}
                                 p
                                     |Author: #{event.author}
                                 p
-                                    |#{event.eventDescription}
+                                    |Type: #{event.eventType}
+                                p
+                                    |Location: #{event.eventLocation}
+                                p
+                                    |Date: #{event.eventDate}
+                                p
+                                    |Time: #{event.eventTime}
+                                p
+                                    |Description: #{event.eventDescription}
                         div(class="modal-footer")
                             div(class="progress")
                                 div(class="indeterminate")
@@ -67,24 +77,34 @@ block main
                                 p
                                     |Author: #{event.author}
                                 p
-                                    |#{event.eventDescription}
+                                    |Date: #{event.eventDate}
+                                p
+                                    |Description: #{event.eventDescription}
                             div(class="card-action")
                                 a(href=event._id data-target=event._id class="modal-trigger")
                                     |View more
                     div(id=event._id class="modal modal-fixed-footer")
                         div(class="modal-content row")
-                            div(class="col s6")
+                            div(class="col s12")
                             if event.eventImage.encoded
-                                img(src="data:image/png;base64," + event.eventImage.encoded)
+                                img(src="data:image/png;base64," + event.eventImage.encoded class="event-image")
                             else
-                                img(src="data:image/png;base64," + event.eventImage.default)
+                                img(src="data:image/png;base64," + event.eventImage.default class="event-image")
                             div(class="col s6")
                                 h4(class="col s12")
                                     |#{event.eventName}
                                 p
                                     |Author: #{event.author}
                                 p
-                                    |#{event.eventDescription}
+                                    |Type: #{event.eventType}
+                                p
+                                    |Location: #{event.eventLocation}
+                                p
+                                    |Date: #{event.eventDate}
+                                p
+                                    |Time: #{event.eventTime}
+                                p
+                                    |Description: #{event.eventDescription}
                         div(class="modal-footer")
                             div(class="progress")
                                 div(class="indeterminate")
