--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -2,7 +2,8 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/users/register.css', type='text/css' )
-    != messages()
+    div(class="orange accent-4 card center-align light-green-text text-lighten-4" id="messages-box")
+            !=messages()
     div(class="row")
         form(id='register-form' class="col s4" action='/register' method='POST')            
             div(class="input-field col s6")
