--- a/views/events/manage-event.pug
+++ b/views/events/manage-event.pug
@@ -3,31 +3,31 @@ extend ../common/_master
 block main
     link(rel='stylesheet', href='../../public/css/users/manage-event.css', type='text/css')
     script(src="../../public/js/users/edit.profile.helper.js")
-    form(action=`/events/manage/${event._id}` method='POST' enctype="multipart/form-data")    
+    form(action=`/events/manage/${context._id}` method='POST' enctype="multipart/form-data")    
         div(class="row")     
             div(class="input-field col s12 m5 l3")
                 button(class="deep-orange material-icons prefix") 
                     |mode_edit
-                input(disabled name="eventName" value=event.eventName id="eventName" type="text" class="validate")
+                input(disabled name="eventName" value=context.eventName id="eventName" type="text" class="validate")
                 label(for="eventName")
                     |Event name: 
             div(class="input-field col s12 m5 l3")
                 button(class="deep-orange material-icons prefix") 
                     |mode_edit
-                input(disabled name="eventLocation" value=event.eventLocation id="eventLocation" type="text" class="validate")
+                input(disabled name="eventLocation" value=context.eventLocation id="eventLocation" type="text" class="validate")
                 label(for="eventLocation")
                     |Event location:
         div(class="row")
             div(class="input-field col s12 m5 l3")
                 button(class="deep-orange material-icons prefix") 
                     |mode_edit
-                input(disabled name="eventType" value=event.eventType id="eventType" type="text" class="validate")
+                input(disabled name="eventType" value=context.eventType id="eventType" type="text" class="validate")
                 label(for="eventType")
                     |Event type:
             div(class="input-field col s12 m5 l3")
                 button(class="deep-orange material-icons prefix") 
                     |mode_edit
-                input(disabled name="eventDescription" value=event.eventDescription id="eventDescription" type="text" class="validate")
+                input(disabled name="eventDescription" value=context.eventDescription id="eventDescription" type="text" class="validate")
                 label(for="eventDescription")
                     |Event description:
         div(class="row")
