unit tests added

--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -39,7 +39,7 @@ block main
                     |Search
             div(class="col s12 m9 l9" id="events-box")
                 div(class="row")
-                each event, index in events
+                each event, index in context
                     div(class="col s12 m4 l4 event-view")
                         div(class="card")
                             div(class="card-image")
