--- a/views/events/browse-events.pug
+++ b/views/events/browse-events.pug
@@ -2,6 +2,8 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/events/browse-events.css', type='text/css')
+    div(class="orange accent-4 card center-align light-green-text text-lighten-4" id="messages-box")
+        !=messages()
     form(id='browse-events-form' class="col s6" action='/events/browse' method='PUT')
         div(class="row")
             div(class="col s12 m3 l3")
@@ -100,8 +102,6 @@ block main
                                 div(class="btn-container hidden")
                                     button(id="participate-btn" class="modal-action modal-close waves-effect waves-green btn-flat participate-btn")
                                         |Participate
-                                    a(href=`/events/manage/${event._id}` id="manage-btn" class="modal-action modal-close waves-effect waves-green btn-flat")
-                                        |Manage 
                                     a(href="#!" class="modal-action modal-close waves-effect waves-green btn-flat")
                                         |Bring me back    
     script(src="../../public/js/events/datepicker.js")
