--- a/views/navigation/home.pug
+++ b/views/navigation/home.pug
@@ -2,6 +2,8 @@ extend ../common/_master
 
 block main
     link(rel='stylesheet', href='../../public/css/home.css', type='text/css')
+    div(class="orange accent-4 card center-align light-green-text text-lighten-4" id="messages-box")
+        !=messages()
     div(class="flow-text")
         p(class="center-align grey-text text-darken-4")
             | Check out our top rated events:
